--- a/labs/lab01.ipynb
+++ b/labs/lab01.ipynb
@@ -2,20 +2,23 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "descending-customer",
+   "id": "offshore-accounting",
    "metadata": {},
    "source": [
     "# lab 01 - Getting Started \n",
     "Name: Robb Alexander\n",
+    "\n",
     "Class: CSCI349\n",
+    "\n",
     "Semester: 2021SP\n",
-    "Instructor: Brian King"
+    "\n",
+    "Instructor: Brian King\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "eastern-constitution",
+   "id": "informal-pierce",
    "metadata": {},
    "outputs": [
     {
