--- a/labs/lab01.ipynb
+++ b/labs/lab01.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "offshore-accounting",
+   "id": "opened-owner",
    "metadata": {},
    "source": [
     "# lab 01 - Getting Started \n",
@@ -16,9 +16,34 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "complimentary-pioneer",
+   "metadata": {},
+   "source": [
+    "####Did you read the syllabus? All of it? Do you agree to abide by the cheating rules? Write a sentence clearly\n",
+    "indicating your commitment to not cheating."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dried-tiger",
+   "metadata": {},
+   "source": [
+    "####What are you hoping to get out of this course?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "passive-fourth",
+   "metadata": {},
+   "source": [
+    "####Print the Python version (available in sys package)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "informal-pierce",
+   "id": "applicable-playback",
    "metadata": {},
    "outputs": [
     {
@@ -33,6 +58,23 @@
    "source": [
     "import sys\n",
     "print(sys.version)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "continental-falls",
+   "metadata": {},
+   "source": [
+    "####Create a Python list of 10000 random integers in the range 1 to 100, using the random package. Name the\n",
+    "list x_list."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "hydraulic-moses",
+   "metadata": {},
+   "source": [
+    "####What is the minimum value of x_list? What is the max value? What is the mode?"
    ]
   }
  ],
