--- a/labs/lab01.ipynb
+++ b/labs/lab01.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "opened-owner",
+   "id": "recovered-occurrence",
    "metadata": {},
    "source": [
     "# lab 01 - Getting Started \n",
@@ -17,33 +17,33 @@
   },
   {
    "cell_type": "markdown",
-   "id": "complimentary-pioneer",
+   "id": "forced-survivor",
    "metadata": {},
    "source": [
-    "####Did you read the syllabus? All of it? Do you agree to abide by the cheating rules? Write a sentence clearly\n",
+    "#### 2. Did you read the syllabus? All of it? Do you agree to abide by the cheating rules? Write a sentence clearly\n",
     "indicating your commitment to not cheating."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "dried-tiger",
+   "id": "paperback-dance",
    "metadata": {},
    "source": [
-    "####What are you hoping to get out of this course?"
+    "#### 3. What are you hoping to get out of this course?"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "passive-fourth",
+   "id": "protecting-contest",
    "metadata": {},
    "source": [
-    "####Print the Python version (available in sys package)"
+    "#### 4. Print the Python version (available in sys package)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "applicable-playback",
+   "id": "expected-circulation",
    "metadata": {},
    "outputs": [
     {
@@ -62,19 +62,19 @@
   },
   {
    "cell_type": "markdown",
-   "id": "continental-falls",
+   "id": "varying-convertible",
    "metadata": {},
    "source": [
-    "####Create a Python list of 10000 random integers in the range 1 to 100, using the random package. Name the\n",
+    "#### 5. Create a Python list of 10000 random integers in the range 1 to 100, using the random package. Name the\n",
     "list x_list."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "hydraulic-moses",
+   "id": "operational-attendance",
    "metadata": {},
    "source": [
-    "####What is the minimum value of x_list? What is the max value? What is the mode?"
+    "#### 6. What is the minimum value of x_list? What is the max value? What is the mode?"
    ]
   }
  ],
