--- a/labs/lab01.ipynb
+++ b/labs/lab01.ipynb
@@ -2,31 +2,35 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "recovered-occurrence",
+   "id": "lesser-gossip",
    "metadata": {},
    "source": [
     "# lab 01 - Getting Started \n",
-    "Name: Robb Alexander\n",
-    "\n",
-    "Class: CSCI349\n",
-    "\n",
-    "Semester: 2021SP\n",
-    "\n",
-    "Instructor: Brian King\n"
+    "Name: Robb Alexander    \n",
+    "Class: CSCI349    \n",
+    "Semester: 2021SP    \n",
+    "Instructor: Brian King"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "forced-survivor",
+   "id": "challenging-freight",
    "metadata": {},
    "source": [
-    "#### 2. Did you read the syllabus? All of it? Do you agree to abide by the cheating rules? Write a sentence clearly\n",
-    "indicating your commitment to not cheating."
+    "#### 2. Did you read the syllabus? All of it? Do you agree to abide by the cheating rules? Write a sentence clearly indicating your commitment to not cheating."
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "chicken-judge",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
-   "id": "paperback-dance",
+   "id": "latter-knock",
    "metadata": {},
    "source": [
     "#### 3. What are you hoping to get out of this course?"
@@ -34,7 +38,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "protecting-contest",
+   "id": "steady-evidence",
    "metadata": {},
    "source": [
     "#### 4. Print the Python version (available in sys package)"
@@ -42,8 +46,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "expected-circulation",
+   "execution_count": 7,
+   "id": "better-monitoring",
    "metadata": {},
    "outputs": [
     {
@@ -62,20 +66,35 @@
   },
   {
    "cell_type": "markdown",
-   "id": "varying-convertible",
+   "id": "latter-keeping",
    "metadata": {},
    "source": [
-    "#### 5. Create a Python list of 10000 random integers in the range 1 to 100, using the random package. Name the\n",
-    "list x_list."
+    "#### 5. Create a Python list of 10000 random integers in the range 1 to 100, using the random package. Name the list x_list."
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "quick-albania",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
-   "id": "operational-attendance",
+   "id": "protected-vegetable",
    "metadata": {},
    "source": [
     "#### 6. What is the minimum value of x_list? What is the max value? What is the mode?"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "recovered-offense",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
