--- a/labs/lab01.ipynb
+++ b/labs/lab01.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "lesser-gossip",
+   "id": "beautiful-entry",
    "metadata": {},
    "source": [
     "# lab 01 - Getting Started \n",
@@ -14,23 +14,21 @@
   },
   {
    "cell_type": "markdown",
-   "id": "challenging-freight",
+   "id": "typical-sussex",
    "metadata": {},
    "source": [
     "#### 2. Did you read the syllabus? All of it? Do you agree to abide by the cheating rules? Write a sentence clearly indicating your commitment to not cheating."
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "chicken-judge",
+   "cell_type": "markdown",
+   "id": "elegant-import",
    "metadata": {},
-   "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "latter-knock",
+   "id": "different-gambling",
    "metadata": {},
    "source": [
     "#### 3. What are you hoping to get out of this course?"
@@ -38,7 +36,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "steady-evidence",
+   "id": "marked-allen",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "olympic-storm",
    "metadata": {},
    "source": [
     "#### 4. Print the Python version (available in sys package)"
@@ -46,8 +50,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "better-monitoring",
+   "execution_count": 8,
+   "id": "dense-vienna",
    "metadata": {},
    "outputs": [
     {
@@ -66,7 +70,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "latter-keeping",
+   "id": "ordinary-duration",
    "metadata": {},
    "source": [
     "#### 5. Create a Python list of 10000 random integers in the range 1 to 100, using the random package. Name the list x_list."
@@ -74,15 +78,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "quick-albania",
+   "execution_count": 11,
+   "id": "infrared-petroleum",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10000\n"
+     ]
+    }
+   ],
+   "source": [
+    "import random\n",
+    "x_list = [random.randint(1,101) for _ in range(10000)]\n",
+    "print(len(x_list))"
+   ]
   },
   {
    "cell_type": "markdown",
-   "id": "protected-vegetable",
+   "id": "wound-shopper",
    "metadata": {},
    "source": [
     "#### 6. What is the minimum value of x_list? What is the max value? What is the mode?"
@@ -91,7 +107,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "recovered-offense",
+   "id": "apart-oasis",
    "metadata": {},
    "outputs": [],
    "source": []
