--- a/labs/lab01.ipynb
+++ b/labs/lab01.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "beautiful-entry",
+   "id": "ceramic-synthesis",
    "metadata": {},
    "source": [
     "# lab 01 - Getting Started \n",
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "typical-sussex",
+   "id": "elect-tumor",
    "metadata": {},
    "source": [
     "#### 2. Did you read the syllabus? All of it? Do you agree to abide by the cheating rules? Write a sentence clearly indicating your commitment to not cheating."
@@ -22,13 +22,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "elegant-import",
+   "id": "satellite-punishment",
    "metadata": {},
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "different-gambling",
+   "id": "grave-character",
    "metadata": {},
    "source": [
     "#### 3. What are you hoping to get out of this course?"
@@ -36,13 +36,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "marked-allen",
+   "id": "considered-violin",
    "metadata": {},
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "olympic-storm",
+   "id": "inappropriate-lithuania",
    "metadata": {},
    "source": [
     "#### 4. Print the Python version (available in sys package)"
@@ -51,7 +51,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "dense-vienna",
+   "id": "unlimited-digest",
    "metadata": {},
    "outputs": [
     {
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ordinary-duration",
+   "id": "stainless-essay",
    "metadata": {},
    "source": [
     "#### 5. Create a Python list of 10000 random integers in the range 1 to 100, using the random package. Name the list x_list."
@@ -79,7 +79,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "infrared-petroleum",
+   "id": "initial-bailey",
    "metadata": {},
    "outputs": [
     {
@@ -92,13 +92,12 @@
    ],
    "source": [
     "import random\n",
-    "x_list = [random.randint(1,101) for _ in range(10000)]\n",
-    "print(len(x_list))"
+    "x_list = [random.randint(1,101) for _ in range(10000)]"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "wound-shopper",
+   "id": "activated-density",
    "metadata": {},
    "source": [
     "#### 6. What is the minimum value of x_list? What is the max value? What is the mode?"
@@ -106,11 +105,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "apart-oasis",
+   "execution_count": 15,
+   "id": "written-lingerie",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "101\n",
+      "48\n"
+     ]
+    }
+   ],
+   "source": [
+    "from statistics import mode\n",
+    "print(min(x_list))\n",
+    "print(max(x_list))\n",
+    "print(mode(x_list))"
+   ]
   }
  ],
  "metadata": {
