--- a/labs/lab01.ipynb
+++ b/labs/lab01.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "satisfactory-stanford",
+   "id": "indirect-wagner",
    "metadata": {},
    "source": [
     "# lab 01 - Getting Started \n",
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "atmospheric-compound",
+   "id": "grand-tomato",
    "metadata": {},
    "source": [
     "#### 2. Did you read the syllabus? All of it? Do you agree to abide by the cheating rules? Write a sentence clearly indicating your commitment to not cheating."
@@ -22,13 +22,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "surface-hayes",
+   "id": "instant-toilet",
    "metadata": {},
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "outdoor-relevance",
+   "id": "greatest-locator",
    "metadata": {},
    "source": [
     "#### 3. What are you hoping to get out of this course?"
@@ -36,13 +36,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "absolute-child",
+   "id": "unable-dialogue",
    "metadata": {},
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "empirical-witch",
+   "id": "champion-registration",
    "metadata": {},
    "source": [
     "#### 4. Print the Python version (available in sys package)"
@@ -51,7 +51,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "underlying-alabama",
+   "id": "selected-mongolia",
    "metadata": {},
    "outputs": [
     {
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "planned-diversity",
+   "id": "loaded-freedom",
    "metadata": {},
    "source": [
     "#### 5. Create a Python list of 10000 random integers in the range 1 to 100, using the random package. Name the list x_list."
@@ -79,7 +79,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "senior-choir",
+   "id": "smooth-helping",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "duplicate-territory",
+   "id": "multiple-royalty",
    "metadata": {},
    "source": [
     "#### 6. What is the minimum value of x_list? What is the max value? What is the mode?"
@@ -97,26 +97,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "id": "fatal-masters",
+   "execution_count": 22,
+   "id": "occasional-traveler",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1\n",
-      "100\n",
-      "34\n"
+      "The minimum of x_list is: 1\n",
+      "The maximum of x_list is: 100\n",
+      "The mode of x_list is: 34\n"
      ]
     }
    ],
    "source": [
     "from statistics import mode\n",
-    "print(min(x_list))\n",
-    "print(max(x_list))\n",
-    "print(mode(x_list))"
+    "print(\"The minimum of x_list is:\", min(x_list))\n",
+    "print(\"The maximum of x_list is:\", max(x_list))\n",
+    "print(\"The mode of x_list is:\", mode(x_list))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "exempt-chemistry",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
