--- a/labs/lab01.ipynb
+++ b/labs/lab01.ipynb
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 84,
    "id": "intimate-harris",
    "metadata": {},
    "outputs": [],
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 87,
    "id": "starting-tobacco",
    "metadata": {},
    "outputs": [
@@ -112,7 +112,7 @@
      "text": [
       "The minimum of x_list is: 1\n",
       "The maximum of x_list is: 100\n",
-      "The mode of x_list is: 85\n"
+      "The mode of x_list is: 33\n"
      ]
     }
    ],
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 86,
    "id": "growing-emission",
    "metadata": {},
    "outputs": [
@@ -141,7 +141,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "50.41\n"
+      "The average of x_list is: 50.27\n"
      ]
     }
    ],
@@ -152,7 +152,7 @@
     "    avg = total / n\n",
     "    return round(avg, 2)\n",
     "\n",
-    "print(average(x_list))"
+    "print(\"The average of x_list is:\", average(x_list))"
    ]
   },
   {
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 85,
    "id": "changed-container",
    "metadata": {},
    "outputs": [
@@ -173,7 +173,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1028, 1001, 975, 1020, 1004, 962, 1010, 973, 1008, 1019]\n"
+      "The histogram of x_list is:\n",
+      "[1013, 997, 1005, 1043, 1028, 963, 977, 968, 1022, 984]\n"
      ]
     }
    ],
@@ -186,6 +187,7 @@
     "    index = (num - 1) // 10\n",
     "    x_hist[index] += count\n",
     "\n",
+    "print(\"The histogram of x_list is:\")\n",
     "print(x_hist)"
    ]
   },
@@ -277,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 88,
    "id": "executed-movement",
    "metadata": {},
    "outputs": [
@@ -285,15 +287,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "x_list is now a ndarray\n",
-      "[85. 58. 63. ... 47. 55. 99.]\n"
+      "x_list is now a int32 ndarray\n",
+      "[28 85 87 ... 88 98 98]\n"
      ]
     }
    ],
    "source": [
     "x_list2 = x_list.copy()\n",
-    "x_list = np.array(x_list)\n",
-    "print(\"x_list is now a\",type(x_list).__name__)\n",
+    "x_list = np.array(x_list, dtype='i')\n",
+    "print(\"x_list is now a\", type(x_list[0]).__name__, type(x_list).__name__)\n",
     "print(x_list)\n",
     "# to print all content, change np.set_printoptions to inf"
    ]
@@ -308,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 89,
    "id": "monetary-rabbit",
    "metadata": {},
    "outputs": [
@@ -316,12 +318,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[85. 58. 63. ... 47. 55. 99.]\n"
+      "x_list is now a float32 ndarray\n",
+      "[28. 85. 87. ... 88. 98. 98.]\n"
      ]
     }
    ],
    "source": [
     "x_list = np.array(x_list2, dtype='f')\n",
+    "print(\"x_list is now a\", type(x_list[0]).__name__, type(x_list).__name__)\n",
     "print(x_list)"
    ]
   },
@@ -335,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 90,
    "id": "stupid-population",
    "metadata": {},
    "outputs": [
@@ -343,7 +347,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n"
+      "[0 0 0 0 0 0 0 0 0 0]\n"
      ]
     }
    ],
@@ -351,7 +355,7 @@
     "# array = [0] * 10\n",
     "# array = [0 for _ in range(10)]\n",
     "\n",
-    "array = np.zeros(10)\n",
+    "array = np.zeros(10, dtype='i')\n",
     "print(array)"
    ]
   },
@@ -365,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 91,
    "id": "taken-receipt",
    "metadata": {},
    "outputs": [
@@ -394,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 92,
    "id": "expensive-cyprus",
    "metadata": {},
    "outputs": [
@@ -424,9 +428,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 93,
    "id": "knowing-training",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -448,24 +456,20 @@
    "source": [
     "np.random.seed(12345)\n",
     "array = np.random.randint(low=10, high=20, size=(10,5), dtype='i')\n",
-    "print(array)"
+    "print(array)\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "duplicate-vegetable",
+   "outputs": [],
+   "source": [],
    "metadata": {
     "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    },
     "pycharm": {
      "name": "#%%\n"
     }
-   },
-   "outputs": [],
-   "source": []
+   }
   }
  ],
  "metadata": {
