--- a/labs/lab01.ipynb
+++ b/labs/lab01.ipynb
@@ -456,20 +456,9 @@
    "source": [
     "np.random.seed(12345)\n",
     "array = np.random.randint(low=10, high=20, size=(10,5), dtype='i')\n",
-    "print(array)\n"
+    "print(array)\n",
+    "\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
   }
  ],
  "metadata": {
